New design, done

--- a/index.html
+++ b/index.html
@@ -1,219 +1,213 @@
 <html lang="en">
 <head>
-  <title>CS4241 Assignment 1</title>
+  <title>cs4241 a1 mariana pachon</title>
   <meta charset="utf-8">
-  <link rel="shortcut icon" href="favicon.png">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  <link rel='stylesheet' type='text/css' href='/style.css'>
-  <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Nixie+One" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body>
+<body id='particles-js'>
+  <h1>mariana pachon</h1>
 
-  <div>
-    <div class='intro parallax'>
-      <h1>mariana pachon</h1>
-      <table class="table table-striped table-dark">
-        <tbody>
-          <tr>
-            <th scope="row">country</th>
-            <td>colombia</td>
-          </tr>
-          <tr>
-            <th scope="row">major</th>
-            <td>computer science</td>
-
-          </tr>
-          <tr>
-            <th scope="row">class</th>
-            <td>2020</td>
-          </tr>
-        </tbody>
-      </table>
-      <div>...</div>
-    </div>
-
-    <div class='interests parallax'>
-     <h2>interests</h2>
-
-     <table class="table table-striped table-dark">
-      <tbody>
-        <tr>
-          <th scope="row">music</th>
-          <td><a href='https://soundcloud.com/marianapachonpuentes' target='_blank'>soundcloud</a></td>
-          <td><a href='https://www.instagram.com/acutetriangleband/' target='_blank'>acute triangle</a></td>
-          <td><a href='https://open.spotify.com/user/11176423928?si=LsGH3_8yRHuTbuJf5tZBbg' target='_blank'>spotify</a></td>
-        </tr>
-        <tr>
-          <th scope="row">writing</th>
-          <td><a href='http://marianapachonpuentes.tumblr.com/' target='_blank'>short stories in spanish</a></td>
-          <td><a href='https://medium.com/@mariana0pachon' target='_blank'>design documents</a></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">meditation</th>
-          <td><a href='http://mardelcerro.com/' target='_blank'>mar del cerro</a></td>
-          <td><a href='https://www.tarabrach.com/' target='_blank'>tara brach</a></td>
-          <td><a href='https://secularbuddhism.com/' target='blank'>buddhism</a></td>
-        </tr>
-        <tr>
-          <th scope="row">languages</th>
-          <td>spanish</td>
-          <td>french</td>
-          <td>japanese soon, after IQP</td>
-        </tr>
-      </tbody>
-    </table>
-    <div>...</div>
-  </div>
-  <div class='courses parallax'>
-    <h2>previous courses</h2>
-
-    <table class="table table-striped table-dark">
-      <thead>
-        <tr>
-          <th scope="col">number</th>
-          <th scope="col">topics</th>
-          <th scope="col">grade</th>
-          <th scope="col"></th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">cs1101</th>
-          <td>racket</td>
-          <td>a</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">cs2102</th>
-          <td>object oriented design in java</td>
-          <td>a</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">cs2022</th>
-          <td>discrete math</td>
-          <td>a</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">cs2303</th>
-          <td>systems in c</td>
-          <td>a</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">cs3043</th>
-          <td>social implications</td>
-          <td>a</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">cs3041</th>
-          <td>human-computer interaction</td>
-          <td>a</td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-    <div>...</div>
+  <div class='row'>
+    <p class='row-title'>
+      country
+    </p>
+    <p>
+      colombia
+    </p>
   </div>
 
-  <div class='experience parallax'>
-    <h2><a id='exp-title' href='https://github.com/mariana0pachon' target='_blank'>experience</a></h2>
-
-    <table class="table table-striped table-dark">
-      <thead>
-        <tr>
-          <th scope="col"></th>
-          <th scope="col">none</th>
-          <th scope="col">some</th>
-          <th scope="col">a lot</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row">html</th>
-          <td></td>
-          <td></td>
-          <td>x</td>
-        </tr>
-        <tr>
-          <th scope="row">css</th>
-          <td></td>
-          <td></td>
-          <td>x</td>
-        </tr>
-        <tr>
-          <th scope="row">java</th>
-          <td></td>
-          <td></td>
-          <td>x</td>
-        </tr>
-        <tr>
-          <th scope="row">javascript</th>
-          <td></td>
-          <td>x</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">ruby</th>
-          <td>x</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">python</th>
-          <td>x</td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">unit testing</th>
-          <td></td>
-          <td>x</td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-    <div>...</div>
+  <div class='row'>
+    <p class='row-title'>
+      major
+    </p>
+    <p>
+      computer science
+    </p>
   </div>
 
-  <div class='education parallax'>
-    <h2>more education</h2>
-
-    <table class="table table-striped table-dark">
-      <thead>
-        <tr>
-          <th    scope="col"></th>
-          <th scope="col">tbd</th>
-          <th scope="col">in progress</th>
-          <th scope="col">done</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <th scope="row"><a href='https://www.udemy.com/the-complete-web-developer-in-2018/learn/v4/overview' target='_blank'>zero to mastery udemy course</a></th>
-          <td></td>
-          <td>x</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">cracking the coding interview</th>
-          <td></td>
-          <td>x</td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row"><a href='http://eloquentjavascript.net/' target='_blank'>eloquent javascript</a></th>
-          <td>x</td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-    <div>...</div>
+  <div class='row'>
+    <p class='row-title'>
+      class
+    </p>
+    <p>
+      2020
+    </p>
   </div>
+
+  <h2>interests</h2>
+
+  <div class="row">
+    <p class='row-title'>
+      music
+    </p>
+    <p><a href='https://soundcloud.com/marianapachonpuentes' target='_blank'>soundcloud</a></p>
+    <p><a href='https://www.instagram.com/acutetriangleband/' target='_blank'>acute triangle</a></p>
+    <p><a href='https://open.spotify.com/user/11176423928?si=LsGH3_8yRHuTbuJf5tZBbg' target='_blank'>spotify</a></p>
+  </div>
+
+  <div class='row'>
+    <p class="row-title">writing</p>
+    <p><a href='http://marianapachonpuentes.tumblr.com/' target='_blank'>short stories in spanish</a></p>
+    <p><a href='https://medium.com/@mariana0pachon' target='_blank'>design documents</a></p>
+    <p></p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>meditation</p>
+    <p><a href='http://mardelcerro.com/' target='_blank'>mar del cerro</a></p>
+    <p><a href='https://www.tarabrach.com/' target='_blank'>tara brach</a></p>
+    <p><a href='https://secularbuddhism.com/' target='blank'>buddhism</a></p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>languages</p>
+    <p>spanish</p>
+    <p>french</p>
+    <p>japanese soon, after iqp</p>
+  </div>
+
+  <h2>previous courses</h2>
+
+  <div class='row'>
+    <p class='row-title'>number</p>
+    <p class='row-title'>topics</p>
+    <p class='row-title'>grade</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>cs1101</p>
+    <p>racket</p>
+    <p>a</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>cs2102</p>
+    <p>object oriented design in java</p>
+    <p>a</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>cs2022</p>
+    <p>discrete math</p>
+    <p>a</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>cs2303</p>
+    <p>systems in c</p>
+    <p>a</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>cs3043</p>
+    <p>social implications</p>
+    <p>a</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>cs3041</p>
+    <p>human-computer interaction</p>
+    <p>a</p>
+  </div>
+
+  <h2><a href='https://github.com/mariana0pachon' target='_blank'>experience</a></h2>
+
+  <div class='row'>
+    <p class='row-title'></p>
+    <p class='row-title'>none</p>
+    <p class='row-title'>some</p>
+    <p class='row-title'>a lot</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>html</p>
+    <p></p>
+    <p></p>
+    <p>x</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>css</p>
+    <p></p>
+    <p></p>
+    <p>x</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>java</p>
+    <p></p>
+    <p></p>
+    <p>x</p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>javascript</p>
+    <p></p>
+    <p>x</p>
+    <p></p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>ruby</p>
+    <p>x</p>
+    <p></p>
+    <p></p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>python</p>
+    <p>x</p>
+    <p></p>
+    <p></p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>unit testing</p>
+    <p></p>
+    <p>x</p>
+    <p></p>
+  </div>
+
+  <div class='row'>
+    <p class='row-title'>react</p>
+    <p></p>
+    <p>x</p>
+    <p></p>
+  </div>
+
+  <h2>more education</h2>
+
+  <div class='row'>
+    <p class='row-title'></p>
+    <p class='row-title'>tbd</p>
+    <p class='row-title'>in progress</p>
+    <p class='row-title'>done</p>
+  </div>
+
+  <div class="row">
+   <p><a class="row-title" href='https://www.udemy.com/the-complete-web-developer-in-2018/learn/v4/overview' target='_blank'>zero to mastery udemy course</a></p>
+   <p></p>
+   <p>x</p>
+   <p></p>
+ </div>
+
+ <div class="row">
+  <p class="row-title">cracking the coding interview</p>
+  <p></p>
+  <p>x</p>
+  <p></p>
 </div>
+
+<div class="row">
+  <p><a href='http://eloquentjavascript.net/' target='_blank' class='row-title'>eloquent javascript</a></p>
+  <p>x</p>
+  <p></p>
+  <p></p>
+</div>
+
+<script type="text/javascript" src="particles.min.js"></script>
+<script type="text/javascript" src='particles-config.js'></script>
+
 </body>
 </html>
