Change fonts and add script file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700i|Source+Sans+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:500|Vollkorn:400i" rel="stylesheet">
     <meta charset="utf-8">
 </head>
 <body>
@@ -12,7 +13,7 @@
 
     <div class="info-container">
         <p>I am am aspiring web developer and Computer Science major in the Class of 2020.</p>
-        <p>In my spare time, I enjoy snowboarding 🏂, mountain biking 🚴‍, and tinkering with Photoshop 🖼️.</p>
+        <p>In my spare time, I enjoy snowboarding, mountain biking, and tinkering with Photoshop.</p>
     </div>
 
 
@@ -38,8 +39,8 @@
             <table cellpadding="0" cellspacing="0" border="0">
                 <thead>
                 <tr>
-                    <th>COURSE</th>
-                    <th>TITLE</th>
+                    <th>Course</th>
+                    <th>Title</th>
                 </tr>
                 </thead>
             </table>
@@ -237,5 +238,7 @@
         </div>
         <div class="thumbnail spacer"></div>
     </div>
+
+    <script src="script.js" async defer></script>
 </body>
 </html>
