changed background color, added divs

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
   <body>
-    <h1>Information about Madeline Burke</h1>
+    <div>
+      <h1>Information about Madeline Burke</h1>
+    </div>
     <p>
       Hi, my name is Madeline Burke and I am a Senior at Worcester Polytechnic Institute (WPI).
     </p>
@@ -42,19 +44,22 @@
     <p>
       <b>Technology and Method Experience</b>
       <ul>
-        <li>A lot:
-          <li>Java</li>
-          <li>Python</li>
-          <li>HTML</li>
-          <li>CSS</li>
-        </li>
-        <li>Some:
-          <li>JavaScript</li>
-          <li>unit testing</li>
-        </li>
-        <li>None:
-          <li>Ruby</li>
-        </li>
+        <li>A lot:</li>
+          <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>HTML</li>
+            <li>CSS</li>
+          </ul>
+        <li>Some:</li>
+          <ul>
+            <li>JavaScript</li>
+            <li>unit testing</li>
+          </ul>
+        <li>None:</li>
+          <ul>
+            <li>Ruby</li>
+          </ul>
       </ul>
 
   </body>
