modified index file

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Adonay Resom</h1>
     <p>
-      [Self introduction]
+      Hello. I'm an international student from Ethiopia and I am currently in my senior year as an undergrad. My hobbies include coding, music, football (some call it soccer -_-) and binging on garbage tv shows.
     </p>
     <p>
-      [Major and other information]
+      I'm pursuing a Bschelor of Science degreee in Computer Science. I've taken a lot of CS courses over three years however I havent taken any related to webware.
     </p>
     <p>
-      [Other things]
+      I'm still a novice at web programming, however, I learn pretty fast.
     </p>
 
     <h2>Experience</h2>
@@ -20,8 +20,8 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
       <li>WPI</li>
+	  <li>Awtar Tech</li>
     </ul>
   </body>
 </html>
