--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       Hello. I'm an international student from Ethiopia and I am currently in my senior year as an undergrad. My hobbies include coding, music, football (some call it soccer -_-) and binging on garbage tv shows.
     </p>
     <p>
-      I'm pursuing a Bschelor of Science degreee in Computer Science. I've taken a lot of CS courses over three years however I havent taken any related to webware.
+      I'm pursuing a Bachelor of Science degreee in Computer Science. I've taken a lot of CS courses over three years, however, I havent taken any related to webware.
     </p>
     <p>
       I'm still a novice at web programming, however, I learn pretty fast.
