Changed some texts and resize the font

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
       <h2>More about me!</h2> 
       <p>
         My specific interests in Computer Science are Web Development and Mobile App Development. I am more familiar with
-        Java Spring frameworks. I am currently new to nodeJS but I have built a messenger chatbot developed with nodeJS so far.
+        Java Spring frameworks. I am currently new to nodeJS. I have built a messenger chatbot developed with nodeJS so far.
+        I am also in touch with React framework and have already implemented a youtube video search with youtube data api.
       </p>
     </div>
     
