renamed project and added language experience

--- a/index.html
+++ b/index.html
@@ -19,9 +19,26 @@
     <p>
       Working experience
     </p>
+	<p>
+      &nbsp;&nbsp;&nbsp;A Lot:
+    </p>
     <ul>
-      <li>WPI</li>
-	  <li>Awtar Tech</li>
+      <li>Java</li>
+	  <li>Python</li>
+	  <li>HTML</li>
+	  <li>Unit Testing</li>
+    </ul>
+	<p>
+      &nbsp;&nbsp;&nbsp;Some:
+    </p>
+    <ul>
+      <li>JavaScipt</li>
+	  <li>CSS</li>
+    </ul><p>
+      &nbsp;&nbsp;&nbsp;None:
+    </p>
+    <ul>
+      <li>Ruby</li>
     </ul>
   </body>
 </html>
