Changed font size

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="header-container">
-        <h1>Information about Myo Min Thant (class of 2020)</h1>
+        <h1>Information about Myo Min Thant (Class of 2020)</h1>
     </div>
 
     <div class="div-container">
