--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
+
   <body>
     <h1 id="headerMain" class="header">
       Information about Grace Pelella - class of 2020
