--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
 <html lang="en">
-  <head>
+<head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-  </head>
-  <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
-    </p>
+</head>
+<body bgcolor="#f2e8ff">
+<h1 style="color:#3f196d; text-align:center; font-family: Impact" >Information about Sarah Armstrong</h1>
+<p style="color:#834fc1; font-family: 'Trebuchet MS'">My name is Sarah and I am in the class of 2020 at WPI.
+</p>
+<p style="color:#834fc1; font-family: 'Trebuchet MS'">I am a computer science major with a business minor.</font>
+</p>
+<p style="color:#834fc1; font-family: 'Trebuchet MS'">At WPI I have taken CS 1101, 2102, 2303, 2011, 2022, 2223,
+    3133, 3043, and 3733.</font>
+</p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
-  </body>
+<h2 style="color:#3f196d; text-align:center; font-family: Impact">Experience</h2>
+<p style="color:#834fc1; font-family: 'Trebuchet MS'">I have had a lot of experience with java, both in classes and on personal projects.
+    I have used HTML, JavaScript, and python in highschool, to make games and websites.
+    I have also used CSS and unit testing on class projects.
+    I have yet to use Ruby but am excited to learn more about it.</font>
+</p>
+<ul style = "color:#d7b5ff">
+    <li>IBM/Rational</li>
+    <li>WPI</li>
+</ul>
+</body>
 </html>
