Added multiple HTML pages to use a menu for nav.

--- a/index.html
+++ b/index.html
@@ -4,29 +4,16 @@
   <meta charset="utf-8">
 </head>
 <body>
-<h1>Information about Jack Palmstrom</h1>
-<p>
-  Hello, my name is Jack Palmstrom, and I am in the class of 2019 at WPI.
-</p>
-<p>
-  Major: Computer Science
-</p>
-<p>
-  Previous computer science courses at WPI: CS 1101, CS 2102, CS 2301, CS 2022, CS 2011, CS 2223, CS 3013, CS 3733, CS 3043, CS 3041, CS 3431
-</p>
 
-<h2>Experience</h2>
-<p>
-  Working experience
-</p>
-<ul>
-  <li>HTML: some</li>
-  <li>CSS: some</li>
-  <li>Java: a lot</li>
-  <li>JavaScript: none</li>
-  <li>Ruby: none</li>
-  <li>Python: some</li>
-  <li>Unit Testing: some</li>
-</ul>
+<h1>Information about Jack Palmstrom</h1>
+  <div>
+    <ul>
+      <li><a href="index.html">Home</a> </li>
+    <li><a href="bio.html">Personal Info</a></li>
+    <li><a href="wpiExperience.html">WPI Eduction</a></li>
+    <li><a href="workExp.html">Work Experience</a></li>
+    </ul>
+  </div>
+
 </body>
 </html>
