--- a/index.html
+++ b/index.html
@@ -4,20 +4,26 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Marc Reardon</h1>
     <p>
-      [Self introduction]
+      Hello! I am a person, I think...
     </p>
     <p>
-      [Major and other information]
+      CS Major, class of 2020.
     </p>
     <p>
-      [Other things]
+      CS classes taken at WPI: 1101, 2102, 2303, 2011, 3013, 2223, 3043, 3431
     </p>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      HTML: some
+      CSS: some
+      Java: a lot
+      Javascript: some
+      Ruby: none
+      Python: a lot
+      unit testing: none
     </p>
     <ul>
       <li>IBM/Rational</li>
