--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       unit testing: none
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>WPI IQP: custom website plugins</li>
+      <li>WPI classes</li>
     </ul>
   </body>
 </html>
