--- a/index.html
+++ b/index.html
@@ -20,25 +20,32 @@
       Working experience
     </p>
 	<p>
-      &nbsp;&nbsp;&nbsp;A Lot:
+      <ul>
+		<li>A Lot:</li>
+		<ul>
+			<li>Java</li>
+			<li>Python</li>
+			<li>HTML</li>
+			<li>Unit Testing</li>
+		</ul>
+	  </ul>
     </p>
-    <ul>
-      <li>Java</li>
-	  <li>Python</li>
-	  <li>HTML</li>
-	  <li>Unit Testing</li>
-    </ul>
 	<p>
-      &nbsp;&nbsp;&nbsp;Some:
+      <ul>
+		<li>Some:</li>
+		<ul>
+			<li>JavaScript</li>
+			<li>CSS</li>
+		</ul>
+	  </ul>
     </p>
-    <ul>
-      <li>JavaScipt</li>
-	  <li>CSS</li>
-    </ul><p>
-      &nbsp;&nbsp;&nbsp;None:
+    <p>
+      <ul>
+		<li>None:</li>
+		<ul>
+			<li>Ruby</li>
+		</ul>
+	  </ul>
     </p>
-    <ul>
-      <li>Ruby</li>
-    </ul>
   </body>
 </html>
