--- a/index.html
+++ b/index.html
@@ -17,13 +17,7 @@
 
     <h2>Experience</h2>
     <p>
-      HTML: some
-      CSS: some
-      Java: a lot
-      Javascript: some
-      Ruby: none
-      Python: a lot
-      unit testing: none
+      HTML: some, CSS: some, Java: a lot, Javascript: some, Ruby: none, Python: a lot, unit testing: none
     </p>
     <ul>
       <li>WPI IQP: custom website plugins</li>
