--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         My specific interests in Computer Science are Web Development and Mobile App Development. I am more familiar with
         Java Spring frameworks. I am currently new to nodeJS. I have built a messenger chatbot developed with nodeJS so far.
         I am also in touch with React framework and have already implemented a youtube video search with youtube data api.
+        Feel free to explore my <a href="https://www.gitshowcase.com/mmthant03" target="_blank">gitshowcase</a>.
       </p>
     </div>
     
@@ -43,7 +44,22 @@
       </p>
     </div>
     
-    <div class="div-container">
+    <div class="div-left">
+      <h2>CS Classes I have taken so far!</h2>
+      <ul>
+        <li><b>CS 1102</b> Accelerated Introduction to Program Design</li>
+        <li><b>CS 2102</b> Object-Oriented Program Design</li>
+        <li><b>CS 2022</b> Discrete Mathematics</li>
+        <li><b>CS 3041</b> Human Computer Interaction</li>
+        <li><b>CS 3431</b> Database System I</li>
+        <li><b>CS 2223</b> Algorithms</li>
+        <li><b>CS 2303</b> Systems Programming Concepts</li>
+        <li><b>CS 3133</b> Foundations of Computer Science</li>
+        <li><b>CS 3733</b> Software Engineering</li>
+      </ul>
+    </div>
+
+    <div class="div-right">
       <h2>Stacks and Languages Experience</h2>
       <ul>
         <li><b>Java:</b> A lot</li>
