Updated index.html with personal info

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Connor McNamara</h1>
     <p>
-      [Self introduction]
+      Runner, gamer, programmer
     </p>
     <p>
-      [Major and other information]
+      CS major 2019, ECE minor
     </p>
     <p>
-      [Other things]
+      CS courses at WPI: Networks, Software Engineering, Software Security Engineering, Artificial Intelligence
     </p>
 
     <h2>Experience</h2>
