just tweaking more

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </p>
 
     <h2 class="header">
-      CS courses taken
+      CS Courses Taken
     </h2>
 
     <p>
@@ -44,7 +44,11 @@
     <p>
       A couple summers ago, I taught and worked with middle schoolers basic HTML and CSS
       with JavaScript sprinkled in too. I encouraged them to be creative and helped support
-      and excite them about STEM opportunities.
+      and excite them about STEM opportunities. </br>
+      This past summer I worked at Office Depot where I was responsible for customer
+      satisfaction in the technology department for sales and in store experience. In my
+      time there, I even got promoted to DMS Captain, where I became the Device Maintenance
+      Support promoter for the 24/7 technological assistance special offer.
     </p>
   </body>
 </html>
