just tweaking more and more

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h1 id="headerMain" class="header">
       Information about Grace Pelella - class of 2020
     </h1>
-    <p>
+    <p class="longtext">
       I am a junior going for a CS major. I am from California, commonly refered to as
       the land of Chaos; earthquakes and fire edition. In B term, I will be going to
       Washington DC for my IQP to work with the Coast Guard.
@@ -41,7 +41,7 @@
       Work Experience
     </h2>
 
-    <p>
+    <p class="longtext">
       A couple summers ago, I taught and worked with middle schoolers basic HTML and CSS
       with JavaScript sprinkled in too. I encouraged them to be creative and helped support
       and excite them about STEM opportunities. </br>
