--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Information about Marc Reardon</h1>
     <p>
-      Hello! I am a person, I think...
+      Hello! I am a person, I think..
     </p>
     <p>
       CS Major, class of 2020.
