index.html content update #2

--- a/index.html
+++ b/index.html
@@ -20,8 +20,42 @@
       Working experience
     </p>
     <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
+      <li>1Source</li>
     </ul>
+    <p>Technology Experience</p>
+    <table>
+      <tr>
+        <th>Tech</th>
+        <th>Experience</th>
+      </tr>
+      <tr>
+        <td>HTML</td>
+        <td>some</td>
+      </tr>
+      <tr>
+        <td>CSS</td>
+        <td>some</td>
+      </tr>
+      <tr>
+        <td>Java</td>
+        <td>a lot</td>
+      </tr>
+      <tr>
+        <td>Javascript</td>
+        <td>some</td>
+      </tr>
+      <tr>
+        <td>Ruby</td>
+        <td>none</td>
+      </tr>
+      <tr>
+        <td>Python</td>
+        <td>some</td>
+      </tr>
+      <tr>
+        <td<unit testing</td>
+        <td>none</td>
+      </tr>
+    </table>
   </body>
 </html>
