--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <td>some</td>
       </tr>
       <tr>
-        <td<unit testing</td>
+        <td>unit testing</td>
         <td>none</td>
       </tr>
     </table>
