--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
 
   <body>
+  <div>
     <h1 id="headerMain" class="header">
       Information about Grace Pelella - class of 2020
     </h1>
@@ -14,15 +15,18 @@
       the land of Chaos; earthquakes and fire edition. In B term, I will be going to
       Washington DC for my IQP to work with the Coast Guard.
     </p>
+  </div>
 
+  <div>
     <h2 class="header">
       CS Courses Taken
     </h2>
-
     <p>
       1101, 2102, 2011, 2202, 2223, 2303, 3041, 3043
     </p>
+  </div>
 
+  <div>
     <h2 class="header">
       Language Experience
     </h2>
@@ -36,11 +40,11 @@
       Python - some </br>
       unit testing - none
     </p>
-
+  </div>
+  <div>
     <h2 class="header">
       Work Experience
     </h2>
-
     <p class="longtext">
       A couple summers ago, I taught and worked with middle schoolers basic HTML and CSS
       with JavaScript sprinkled in too. I encouraged them to be creative and helped support
@@ -50,5 +54,6 @@
       time there, I even got promoted to DMS Captain, where I became the Device Maintenance
       Support promoter for the 24/7 technological assistance special offer.
     </p>
+  </div>
   </body>
 </html>
