I did a lottttt of dev in another repo... but it turned out i forgot to fork it from master (rather i just cloned it).... so i needed to make a new repo with none of my VC history so I could make this pull request and submit

--- a/index.html
+++ b/index.html
@@ -1,27 +1,48 @@
-<html lang="en">
+<!doctype html>
+<html>
   <head>
-    <title>CS4241 Assignment 1</title>
+    <title>Alex's Website</title>
+    <link href="main.css" rel="stylesheet" type="text/css"/>
     <meta charset="utf-8">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans|Dosis:400,800" rel="stylesheet" type="text/css" />
   </head>
+
   <body>
-    <h1>Information about [Your name here]</h1>
-    <p>
-      [Self introduction]
-    </p>
-    <p>
-      [Major and other information]
-    </p>
-    <p>
-      [Other things]
+    <header>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li><a href="experience.html">Experience</li>
+          <li><a href="projects.html">Projects</li>
+          <li><a href="about_me.html">About Me</li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <h1>Alexander Antaya</h1>
+    <h2>Software Engineering Student and Travel Enthusiast</h2>
+    <img src="meMachuPicchu.jpg" alt="Photo of Alex" class="center round" style="width:25%;height:25%;">
+
+    <h2>Alex the Software Engineering</h2>
+    <p class="centertext">
+      I am passionate about problem solving! It seems like everyday I find myself asking "How can we fix that?",
+      "How can we make that better?", "How can I fix or make that better with CS?". I see myself as a problem
+      solver more than a computer scientist. To me, computer science is a tool to solve real problems.
+      With that being said, <strong>I love to code</strong>! Courses I've taken WPI include all of the systems courses,
+      software engineering, RBE 1002-3001, a couple digital ECE courses, and algorithms. I know a lot of Java.
+      I know some Python, HTML, and CSS. I know absolutly no Ruby, JavaScript, or Unit Testing.
     </p>
 
-    <h2>Experience</h2>
-    <p>
-      Working experience
+    <h2>Alex the Travel Enthusiast</h2>
+    <p class="centertext">
+      When I am not cleansing the world of segfaults and merge conflicts, I love to spend my time traveling! I
+      have been blessed to be able to travel to over 15 countries and experience so many different cultures. For me,
+      it's more than just the views and the people. Traveling gives me an opportunity to realize different
+      problems that I may not be able to experience in America, and understand how people in different
+      cultures approach solving these problems.
     </p>
-    <ul>
-      <li>IBM/Rational</li>
-      <li>WPI</li>
-    </ul>
+
+    <footer>Copyright © Alexander Antaya 2018</footer>
   </body>
 </html>
