--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
   </head>
-  <body>
+  <body {background-image:url('https://g.redditmedia.com/ff4IsKq7T6FS3GVkc-woy3CO6SculXUez0eCZITmYHA.gif?fm=mp4&mp4-fragmented=false&s=9569fb66a11615679ad1e1004a8b7587');background-repeat:repeat}>
     <h1 align="center">Information about Meghana Bhatia</h1>
     <h2>Basic Information</h2>
     <p>
