--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Information about James Kenney</h1>
     <p>
-        I am a Computer Science major, class of 2019
+        I am a Computer Science major, class of 2019. In my free time, I enjoy skiing and sailing.
     </p>
     <h2>Previous CS courses</h2>
     <ul>
@@ -22,6 +22,7 @@
         <li>CS 4120</li>
     </ul>
     <h2>Experience</h2>
+    <h3>Class Technologies</h3>
     <ul>
         <li>HTML - None</li>
         <li>CSS - Some</li>
@@ -30,6 +31,11 @@
         <li>Ruby - None</li>
         <li>Python - Some</li>
         <li>Unit testing - Some</li>
+    </ul>
+    <h3>Work Experience</h3>
+    <ul>
+        <li>Sierra Olympic Technologies</li>
+        <li>Hood Technology Mechanical</li>
     </ul>
   </body>
 </html>
