--- a/index.html
+++ b/index.html
@@ -1,26 +1,43 @@
 <html lang="en">
   <head>
     <title>CS4241 Assignment 1</title>
+    <link rel="stylesheet" href='style.css'>
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about Trang Ha</h1>
+    <h1 class="trang">Trang Ha</h1>
+    <div class="topnav">
+  		<a href="#home">Home</a>
+  		<a href="#about">About</a>
+  		<a href="#course_taken">Courses</a>
+  		<a href="#exp">Experience</a>
+  		<a href="#contact">Contact</a>
+  		
+</div>
+    <h2 style="font-family:Verdana;font-style:bold;font-size: 24px" >
+      Computer Science, class of 2019.
+    </h2>
+    <img class="ava" src = "trang_picture.jpg">
+    <h2 id="about">About me</h2>
     <p>
-      I am Trang Ha, class of 2019.
+      I'm currently a senior in Computer Science at WPI with a minor in Statistics. </p>
+      <p>I'm an energetic and sociable girl who seeks to make friends wherever she goes
     </p>
+    <h2 id="course_taken"> Courses taken at WPI:</h2>
     <p>
-      I'm majoring in Computer Science with a minor in Stats.
-    </p>
-    <p>
-      Courses in CS I've previously taken at WPI include Software Engineering, Algorithms, OS, Foundation of CS, OOAD, Mobile Ubiquitous Android programming.
+      
+    <ul>
+      	<li>Software Engineering</li>
+      	<li>Algorithms</li>
+      	<li>Foundation of CS</li>
+      	<li>Mobile Ubiquitous Android programming</li>
+      	<li>Operating Systems</li>
+      	<li>Object-Oriented Analysis and Design</li>
+    </ul> 
     </p>
 
-    <h2>Experience</h2>
+    <h2 id="exp">Experience</h2>
     <p>
-      <h3> Academic Experience</h3>
-	  <ul>
-	      <li>WPI</li>
-	  </ul>
       <ul>
       	<li>HTML: some</li>
       	<li>CSS: some</li>
@@ -31,5 +48,15 @@
       	<li>unit testing: a lot</li>
       </ul>
     </p>
+
+	<h2 id="contact">Contact</h2>
+    <p>
+      <ul>
+      	<li>Email: tdha@wpi.edu</li>
+      	<li>Mobile: 541-829-XXXX</li>
+  
+      </ul>
+    </p>
+
   </body>
 </html>
