--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Basic Information<span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link" href="#block1">Basic Information</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Previous Courses</a>
+          <a class="nav-link" href="#block2">Previous Courses</a>
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Experience</a>
+          <a class="nav-link" href="#block3">Experience</a>
         </li>
       </ul>
     </div>
@@ -55,20 +55,20 @@
     <div class="content">
       <hr class="featurette-divider">
 
-      <div class="row featurette">
+      <div id="block1" class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">Basic information about <span class="text-focused">Yuanda Song(Danny)</span></h2>
           <p class="lead"> Yuanda Song (Danny), class of 2020 majoring in Computer Science, is in his junior year at Worcester
             Polytechnic Institute. He is a Software Engineer, a Photographer and a Gamer</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img class="featurette-image img-fluid mx-auto" src="./assets/pic1.jpeg" >
         </div>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
+      <div id="block2" class="row featurette">
         <div class="col-md-7 order-md-2">
           <h2 class="featurette-heading">Previous computer science courses</h2>
           <ul class="courses-list">
@@ -87,15 +87,16 @@
           </ul>
         </div>
         <div class="col-md-5 order-md-1">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="./assets/pic2.png" >
+
         </div>
       </div>
 
       <hr class="featurette-divider">
 
-      <div class="row featurette">
+      <div id="block3" class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">experience with the following technologies and methods</h2>
+          <h2 class="featurette-heading">Experience with the following technologies and methods</h2>
           <ul class="technologies-list">
             <li>HTML - A lot</li>
             <li>CSS - A lot</li>
@@ -108,7 +109,7 @@
           </ul>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="./assets/pic3.png">
         </div>
       </div>
 
