--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
   <head>
     <title>CS4241 Assignment 1</title>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/light.css" id="mode">
+    <script src="scripts/main.js"></script>
   </head>
   <body>
     <h1>Information about Skyler Kim</h1>
@@ -20,8 +22,18 @@
       Working experience
     </p>
     <ul>
-      <li>Bank of Hawaii</li>
-      <li>SA for WPI</li>
+      <li>Bank of Hawaii: Work with eSolutions team on web applications for company intranet.</li>
+      <li>SA for WPI: SA for CS1004, CS2301, CS2202</li>
     </ul>
+    
+    <h2>4000 Level Classes</h2>
+    <ul>
+      <li>CS4432: Database 2</li>
+      <li>CS4341: Intro to AI</li>
+      <li>CS4533: Compilers (Currently taking)</li>
+      <li>CS4241: Webware (Currently taking)</li>
+      <li>CS4210: Analysis of Algorithms (Currently taking)</li>
+    </ul>
+    <div id="footerImage" onclick="changeMode()" value=0></div>
   </body>
 </html>
