updated information to justify image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p>
       In my free time, I like to play Pokemon VGC. <a href="https://pokemonshowdown.com/users/bettyflores">Here is my showdown account.</a>
       <br/> The new format just got released, so I'm not as high on ladder as I would like to be.
+      My favorite pokemon is Mimikyu because of how versatile it can be. 
     </p>
 
     <h2>Experience</h2>
