--- a/index.html
+++ b/index.html
@@ -20,6 +20,12 @@
           font-size: 130%;
           text-align: center;
          }
+    h4   {
+          color: steelblue;
+          font-family: verdana;
+          font-size: 100%;
+          text-align: left;
+         }
 
 
     p    {color: black;}
@@ -28,7 +34,7 @@
         max-width: calc(800px - (30px * 2));
         margin-right: auto;
         margin-left: auto;
-        padding: 30px 70px;
+        padding: 10px;
 }
 
     .profilepic {
@@ -52,7 +58,7 @@
     <h2>WPI Class of 2020</h2>
     <h3>Computer Science Major / Interactive Media and Game Development Minor</h3>
     </em>
-    <h2>Experience</h2>
+    <h4>Experience</h4>
     <p>
       Previous Computer Science Courses I Have Taken at WPI
     </p>
