Wrote readme file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="trang">Trang Ha</h1>
-    <div class="topnav">
+    <div class="nav">
   		<a href="#home">Home</a>
   		<a href="#about">About</a>
   		<a href="#course_taken">Courses</a>
