changed server files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-  <link rel="stylesheet" type="text/css" href="./css/styles.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
 
@@ -62,7 +62,7 @@
             Polytechnic Institute. He is a Software Engineer, a Photographer and a Gamer</p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-fluid mx-auto" src="./assets/pic1.jpeg" >
+          <img class="featurette-image img-fluid mx-auto" src="pic1.jpeg" >
         </div>
       </div>
 
@@ -87,7 +87,7 @@
           </ul>
         </div>
         <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" src="./assets/pic2.png" >
+            <img class="featurette-image img-fluid mx-auto" src="pic2.png" >
 
         </div>
       </div>
@@ -109,7 +109,7 @@
           </ul>
         </div>
         <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" src="./assets/pic3.png">
+            <img class="featurette-image img-fluid mx-auto" src="pic3.png">
         </div>
       </div>
 
