fixed formating of footer image and list text

--- a/index.html
+++ b/index.html
@@ -7,34 +7,38 @@
     <script src="scripts/main.js"></script>
   </head>
   <body>
-    <h1>Information about Skyler Kim</h1>
-    <p>
-      My name is Skyler Kim. <br/>I'm a junior majoring in CS. <br/>I have a little experience with ASP .NET, but I would like to learn more. 
-      <br/>I look forward to working with all of you this term.
-    </p>
-    <p>
-      In my free time, I like to play Pokemon VGC. <a href="https://pokemonshowdown.com/users/bettyflores">Here is my showdown account.</a>
-      <br/> The new format just got released, so I'm not as high on ladder as I would like to be.
-      <br/> My favorite pokemon is Mimikyu because of how versatile it can be. 
-    </p>
-
-    <h2>Experience</h2>
-    <p>
-      Working experience
-    </p>
-    <ul>
-      <li>Bank of Hawaii: Work with eSolutions team on web applications for company intranet.</li>
-      <li>SA for WPI: SA for CS1004, CS2301, CS2202</li>
-    </ul>
+    <div>
+        <h1>Information about Skyler Kim</h1>
+        <p>
+          My name is Skyler Kim. <br/>I'm a junior majoring in CS. <br/>I have a little experience with ASP .NET, but I would like to learn more. 
+          <br/>I look forward to working with all of you this term.
+        </p>
+        <p>
+          In my free time, I like to play Pokemon VGC. <a href="https://pokemonshowdown.com/users/bettyflores">Here is my showdown account.</a>
+          <br/> The new format just got released, so I'm not as high on ladder as I would like to be.
+          <br/> My favorite pokemon is Mimikyu because of how versatile it can be. 
+        </p>
     
-    <h2>4000 Level Classes</h2>
-    <ul>
-      <li>CS4432: Database 2</li>
-      <li>CS4341: Intro to AI</li>
-      <li>CS4533: Compilers (Currently taking)</li>
-      <li>CS4241: Webware (Currently taking)</li>
-      <li>CS4210: Analysis of Algorithms (Currently taking)</li>
-    </ul>
+        <h2>Experience</h2>
+        <p>
+          Working experience
+          <ul>
+            <li>Bank of Hawaii: Work with eSolutions team on web applications for company intranet.</li>
+            <li>SA for WPI: SA for CS1004, CS2301, CS2202</li>
+          </ul>
+        </p>
+        
+        <h2>4000 Level Classes</h2>
+        <p>
+          <ul>
+            <li>CS4432: Database 2</li>
+            <li>CS4341: Intro to AI</li>
+            <li>CS4533: Compilers (Currently taking)</li>
+            <li>CS4241: Webware (Currently taking)</li>
+            <li>CS4210: Analysis of Algorithms (Currently taking)</li>
+          </ul>
+        </p>
+    </div>
     <div id="footerImage" onclick="changeMode()" value=0></div>
   </body>
 </html>
