--- a/index.html
+++ b/index.html
@@ -102,7 +102,6 @@
     </div>
 
     <h2>Programming Experience</h2>
-
     <!-- First Row -->
     <div class="container">
         <!-- HTML -->
@@ -237,6 +236,46 @@
             </div>
         </div>
         <div class="thumbnail spacer"></div>
+    </div>
+
+    <h2 style="margin-bottom: 7px">Enjoy Some Beautiful Art</h2>
+    <div id="image-gallery">
+        <div class="gallery-column">
+            <img src="https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/34950/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746__340.jpg"/>
+            <img src="https://media.istockphoto.com/photos/plant-growing-picture-id510222832?k=6&m=510222832&s=612x612&w=0&h=Pzjkj2hf9IZiLAiXcgVE1FbCNFVmKzhdcT98dcHSdSk="/>
+            <img src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2017/05/07/19/32/strawberry-2293337_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2015/10/24/11/09/drop-of-water-1004250_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2018/08/17/10/10/tea-lights-3612508_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
+        </div>
+        <div class="gallery-column">
+            <img src="https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/34950/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746__340.jpg"/>
+            <img src="https://media.istockphoto.com/photos/plant-growing-picture-id510222832?k=6&m=510222832&s=612x612&w=0&h=Pzjkj2hf9IZiLAiXcgVE1FbCNFVmKzhdcT98dcHSdSk="/>
+            <img src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2017/05/07/19/32/strawberry-2293337_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2015/10/24/11/09/drop-of-water-1004250_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2018/08/17/10/10/tea-lights-3612508_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
+        </div>
+        <div class="gallery-column">
+            <img src="https://images.pexels.com/photos/248797/pexels-photo-248797.jpeg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://images.pexels.com/photos/34950/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=350"/>
+            <img src="https://wallpaperbrowse.com/media/images/soap-bubble-1958650_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2016/10/27/22/53/heart-1776746__340.jpg"/>
+            <img src="https://media.istockphoto.com/photos/plant-growing-picture-id510222832?k=6&m=510222832&s=612x612&w=0&h=Pzjkj2hf9IZiLAiXcgVE1FbCNFVmKzhdcT98dcHSdSk="/>
+            <img src="https://cdn.pixabay.com/photo/2016/08/09/21/54/yellowstone-national-park-1581879_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2017/05/07/19/32/strawberry-2293337_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2015/10/24/11/09/drop-of-water-1004250_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2018/08/17/10/10/tea-lights-3612508_960_720.jpg"/>
+            <img src="https://cdn.pixabay.com/photo/2018/08/12/15/29/hintersee-3601004_960_720.jpg"/>
+        </div>
     </div>
 
     <script src="script.js" async defer></script>
