--- a/index.html
+++ b/index.html
@@ -5,14 +5,22 @@
 
   <title>CS4241 Assignment 1</title>
   <meta charset="utf-8">
+  <script async defer src="https://buttons.github.io/buttons.js"></script>
 </head>
 
 <body style="background-image: url(background.jpg); background-size: cover;">
   <div style="background-color: rgba(25, 26, 28, 0.5)">
-    <h1>Kamil Gumienny</h1>
+
+    <div class="centre">
+      <div style="width: 80%">
+        <h1>Kamil Gumienny</h1></div>
+      <div style="width: 20%; padding-top: 60px;">
+        <a class="github-button" href="https://github.com/kmgumienny" data-size="large" aria-label="Follow @kmgumienny on GitHub">Follow @kmgumienny</a>
+      </div>
+    </div>
     <hr>
     <h2>About me</h2>
-    <p style="text-align: center;">I am a WPI junior studying Computer Science. If you want to learn more, scroll over the images below</p>
+    <p style="text-align: center; font-size: 20px;">I am a WPI junior studying Computer Science. If you want to learn more, scroll over the images below</p>
     <br><br>
     <div class="centre">
       <div class="container">
@@ -22,19 +30,19 @@
         </div>
       </div>
       <div class="container">
-        <img src="music.jpg" alt="Avatar" class="image">
+        <img src="music.jpg" alt="Apple Music Logo" class="image">
         <div class="overlay">
           <div class="text">One of my favorite hobbies when I'm feeling lazy is to find new music. I always listen to my Discover Weekly playlist on Spotify and in general I'm always on the hunt for some new tunes.</div>
         </div>
       </div>
       <div class="container">
-        <img src="thetachi.jpg" alt="Avatar" class="image">
+        <img src="thetachi.jpg" alt="Theta Chi" class="image">
         <div class="overlay">
           <div class="text">I am a brother of Theta Chi and am currently serving as the interim Secretary. Being in a fraternity adds many obligations to my schedule but I find it worth it because all those obligations are fulfilled with people I enjoy being around.</div>
         </div>
       </div>
       <div class="container">
-        <img src="gym.jpg" alt="Avatar" class="image">
+        <img src="gym.jpg" alt="WPI Gym" class="image">
         <div class="overlay">
           <div class="text">I enjoy going to the gym. It's my happy place and I need to spend at least 1.5 hours in the gym a day to reset my mojo.</div>
         </div>
@@ -42,34 +50,92 @@
     </div>
     <br>
     <br>
-      <h2>Experience</h2>
-      <div class="centre">
-        <div style="width: 50%;">
-          <div style="padding-left: 50px;">
-            <h3>Work Experience</h3>
-            <p>
-              On campus I worked with the Athletic Department to help facilitate sporting events (the students in the bright green shirts catching foul soccer balls). I currently work on-call for a cybersecurity company in Newport Beach, CA. I enjoy this field of work
-              and hope to enter the workforce as a Cybersecurity Analyst. My goal is to be in a Red Team or a Security Software Developer.
-            </p>
-          </div>
+    <h2>Experience</h2>
+    <div class="centre">
+      <div style="width: 50%;">
+        <div style="padding-right: 25px; padding-left: 50px;">
+          <h3>Work Experience</h3>
+          <p style="font-size: 18px; text-align: center;">
+            On campus I worked with the Athletic Department to help facilitate sporting events (the students in the bright green shirts catching foul soccer balls). I currently work on-call for a cybersecurity company in Newport Beach, CA. I enjoy this field of work
+            and hope to enter the workforce as a Cybersecurity Analyst. My goal is to be in a Red Team or a Security Software Developer.
+          </p>
         </div>
-
-        <div style="width: 50%;">
-          <div style="padding-right: 50px">
-            <h3>Programming Experience</h3>
-            <ul>
-              <li>HTML - </li>
-              <li>CSS - </li>
-              <li>Java - </li>
-              <li>JavaScript - </li>
-              <li>Ruby - </li>
-              <li>Python - </li>
-              <li>Unit Testing - </li>
-            </ul>
-          </div>
-        </div>
-
       </div>
+      <div style="width: 50%;">
+        <div style="padding-right: 50px; padding-left: 25px">
+          <h3>Programming Experience</h3>
+          <div class="centre">
+            <div style="width: 30%;">
+              <div style="padding-left: 40px;">
+                <div>
+                  <div class="container_skills">
+                    <div class="skills title_html">HTML</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills title_css">CSS</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills title_js">JS</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills title_python">PYTHON</div>
+                  </div>
+                  <div class="container_skills">
+                    <div class="skills title_java">JAVA</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills title_ruby">RUBY</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills title_ut">Unit Testing</div>
+                  </div>
+                </div>
+                <br>
+              </div>
+            </div>
+
+            <div style="width: 70%;">
+              <div>
+                <div>
+                  <div class="container_skills">
+                    <div class="skills html">40%</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills css">20%</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills js">25%</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills python">15%</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills java">60%</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills ruby">5%</div>
+                  </div>
+
+                  <div class="container_skills">
+                    <div class="skills ut">35%</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <div>
 </body>
 
