Update index.html to include personal information

--- a/index.html
+++ b/index.html
@@ -4,20 +4,32 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <h1>Information about [Your name here]</h1>
+    <h1>Information about Dan Wensley</h1>
     <p>
-      [Self introduction]
+      I am a senior at WPI.
     </p>
     <p>
-      [Major and other information]
+      My majors are Robotics Engineering and Computer Science.
     </p>
     <p>
-      [Other things]
+      At WPI I have taken:
     </p>
+    <ul>
+      <li>Intro to Computer Science</li>
+      <li>Object-Oriented Programming</li>
+      <li>Discrete Mathematics</li>
+      <li>Systems Programming</li>
+      <li>Algorithms</li>
+      <li>Assembly</li>
+      <li>Operating Systems</li>
+      <li>Foundations of Computer Science</li>
+      <li>AI for Gaming</li>
+      <li>Introduction to AI</li>
+    </ul>
 
     <h2>Experience</h2>
     <p>
-      Working experience
+      I have a lot of experience with java and python. Additionally, I also have limited experience with HTML, CSS and javascript.
     </p>
     <ul>
       <li>IBM/Rational</li>
